# entryops-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  dochopper.spec  dochopper_setup.iss  entryops.spec  entryops_setup.iss  pyproject.toml  requirements.txt
.github/workflows/: build.yml
Dochopper/: __init__.py  _branding.py  ai_agent_core.py  ai_agent_integration.py  ai_template_generator.py  animated_splash.py  auto_template_generator_dialog.py  auto_update.py  dochopper.py  ocrmill_database.py  ocrmill_enrichment.py  ocrmill_exporter.py  ocrmill_processor.py  ocrmill_worker.py  requirements.txt  settings_dialog.py  settings_manager.py  template_generator.py  template_wizard.py  version.py
Dochopper/Resources/References/: parts_master_template.csv
Dochopper/invoice_processor/: README.md  __init__.py
Dochopper/invoice_processor/core/: exporter.py  processor.py
Dochopper/isf_filing/: RECORDING.md  field_map.py  loaders.py  payload.py  runner.py  widgets.py
Dochopper/ocr/: __init__.py  base.py  docuware.py  preprocess.py  tesseract.py
Dochopper/templates/: __init__.py  base_template.py  isf_10_plus_2.py  lacey_act_form.py  newell_aishida.py  smart_universal.ai_meta.json  smart_universal.py
SmartExtractor/: README.md  smart_extractor.py  smart_extractor_dialog.py
docs/: DATA_FLOW_DIAGRAM.md  DEPENDENCY_LIST.md
docs/flowcharts/: 01_invoice_processing_workflow.md  02_parts_master_data_flow.md  03_ocrmill_template_processing.md  04_section_232_301_tariff_detection.md  05_application_architecture.md  06_user_workflow.md  README.md
entryops/: __init__.py  _branding.py  ai_agent_core.py  ai_agent_integration.py  ai_agent_tools.py  ai_template_generator.py  animated_splash.py  auto_template_generator_dialog.py  auto_update.py  entryops.py  ocrmill_database.py  ocrmill_enrichment.py  ocrmill_exporter.py  ocrmill_processor.py  ocrmill_worker.py  settings_dialog.py  settings_manager.py  template_generator.py  template_wizard.py  version.py
entryops/invoice_processor/: README.md  __init__.py
entryops/invoice_processor/core/: processor.py
entryops/isf_filing/: RECORDING.md  __init__.py  field_map.json  field_map.py  importers.json  loaders.py  payload.py  widgets.py
entryops/ocr/: tesseract.py
entryops/templates/: __init__.py  base_template.py  isf_10_plus_2.py  lacey_act_form.py  smart_universal.ai_meta.json  smart_universal.py  tabular_invoice.py
scripts/: generate_password_hash.py
(+1 files in other folders)
