[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dochopper"
version = "0.1.2"
description = "Document-driven workflow automation: extract structured data from PDFs/Excel, enrich, and drive downstream systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DocHopper contributors"}
]
keywords = ["pdf", "extraction", "ocr", "workflow", "automation", "form-fill", "customs", "invoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/ProcessLogicLabs/dochopper"
Issues = "https://github.com/ProcessLogicLabs/dochopper/issues"
