[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entryops-desktop"
version = "0.2.1"
description = "EntryOps (desktop edition) — extract structured data from PDFs/Excel, enrich against a parts master, and drive downstream customs-entry systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "EntryOps contributors"}
]
keywords = ["pdf", "extraction", "ocr", "customs", "invoice", "isf", "section-232", "section-301", "workflow", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/ProcessLogicLabs/entryops-desktop"
Issues = "https://github.com/ProcessLogicLabs/entryops-desktop/issues"
Cloud = "https://entryops.us"
